<resources xmlns:tools="http://schemas.Android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="rule_password">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ`¬!"£$%^*()~=#{}[];':,./?/*-_+&#060;&#062;&#064;&#038;</string>
    <string name="app_name">3D无界</string>
    <string name="Word_data_Empty">没有任何数据</string>
    <string name="Word_check_net">请检查网络</string>
    <string name="Word_Recommend">推荐</string>
    <string name="Word_Film">影视</string>
    <string name="Word_Original">原创</string>
    <string name="Word_Local">本地</string>
    <string name="Word_myupload">我的上传</string>
    <string name="Word_try">试看</string>
    <string name="Word_history">播放历史</string>
    <string name="Word_manager">管理</string>
    <string name="Word_empty">快去找些喜欢的视频吧</string>
    <string name="Word_shop">商城</string>
    <string name="cancle_attention">取消关注</string>
    <string name="loading">正在加载</string>
    <string name="upload">上传</string>
    <string name="cancleupload">取消上传</string>
    <string name="uploading">正在上传</string>
    <string name="uploaded">上传成功</string>
    <string name="uploaderror">停止上传</string>
    <string name="videonameedt">请输入视频名称</string>
    <string name="videonpicedt">请选择视频截图</string>
    <string name="videointroduceedt">请输入视频描述</string>
    <string name="picnameedt">请输入图片名称</string>
    <string name="picintroduceedt">请输入图片描述</string>
    <string name="clicklogin">登录/注册</string>
    <string name="Word_Collect">收藏</string>
    <string name="Word_Attention">关注</string>
    <string name="Word_Attentioned">已关注</string>
    <string name="Word_Download">下载</string>
    <string name="Word_Mymsg">我的消息</string>
    <string name="Word_Loginpart">加入组织</string>
    <string name="Word_Set">设置</string>
    <string name="Word_enterfeedback">请输入意见反馈</string>
    <string name="Word_entercontracts">请输入联系方式</string>
    <string name="Word_Introduce">使用说明</string>
    <string name="Word_stepone">步骤一</string>
    <string name="Word_steptwo">步骤二</string>
    <string name="Word_steponeinfo">"按照使用说明书安装激活\"幻影3D双面侠\",激活成功后,如图,点击进入人眼追踪校准"</string>
    <string name="Word_steptwoinfo">"进入人眼追踪校准,点击加号或者减号,直到看不到狮子重影"</string>
    <string name="feedback_adviceedt">请输入您的宝贵意见(字数不超过500字)</string>
    <string name="tv_feedback_contact">联系方式</string>
    <string name="et_feedback_contact">QQ/微信号,手机号(必填)</string>
    <string name="upload_picture">上传照片(最多9张)</string>
    <string name="post_feedback">提交反馈</string>
    <string name="sure_btn">确定</string>
    <string name="cancle_btn">取消</string>
    <string name="canclezan_success">取消点赞</string>
    <string name="canclezan_error">取消失败</string>
    <string name="Word_active">激活</string>
    <string name="Word_eyeball">眼球追踪校准</string>
    <string name="Word_introduction">使用说明</string>
    <string name="Word_safe">账户安全与问题</string>
    <string name="Word_changepsw">修改密码</string>
    <string name="Word_changephone">更换绑定手机号</string>
    <string name="Word_setpsw">设置密码</string>
    <string name="Word_oldpsw">旧密码</string>
    <string name="Word_newpsw">新密码</string>
    <string name="Word_surepsw">确认密码</string>
    <string name="Word_feedback">意见反馈</string>
    <string name="Word_banquan">版权说明</string>
    <string name="set_player">切换播放器</string>
    <string name="Word_clearcache">清除缓存</string>
    <string name="Word_zerocache">0M</string>
    <string name="Word_clearcacheok">清除缓存成功</string>
    <string name="Word_phonenum">手机号</string>
    <string name="Word_oldphonenum">当前绑定手机号</string>
    <string name="Word_Personinfo">个人信息</string>
    <string name="Word_save">保存</string>
    <string name="Word_headview">头像</string>
    <string name="Word_nickname">昵称</string>
    <string name="Word_nicknamehint">给自己取个牛逼哄哄的昵称吧</string>
    <string name="Word_emoji">暂不支持Emoji表情</string>
    <string name="Word_sex">性别</string>
    <string name="Word_nan">男</string>
    <string name="Word_nv">女</string>
    <string name="Word_signature">个性签名</string>
    <string name="Word_signaturehint">给自己写个超赞的个性签名吧</string>
    <string name="Word_login">登录</string>
    <string name="Word_loginname" >账号</string>
    <string name="Word_loginnamehint" >请输入手机号码</string>
    <string name="Word_mobilelengtherror">请输入正确的手机号码</string>
    <string name="Word_psw">密码</string>
    <string name="Word_pswhint">请输入密码</string>
    <string name="Word_psw2hint">请确认密码</string>
    <string name="Word_twopswdiff">密码和确认密码不一致</string>
    <string name="Word_mobileregister">手机快速注册</string>
    <string name="Word_forgetpsw" >忘记密码</string>
    <string name="Word_weixin">微信</string>
    <string name="Word_qq">QQ</string>
    <string name="Word_weibo">微博</string>
    <string name="Word_disanfang" >OR</string>
    <string name="Word_register">注册</string>
    <string name="Word_registerfail">注册失败</string>
    <string name="Word_registersuccess">注册成功,请登录</string>
    <string name="Word_loginfail">登录失败</string>
    <string name="Word_loadfail">加载失败</string>
    <string name="Word_loginsuccess">登录成功</string>
    <string name="Word_layoutsuccess">注销成功</string>
    <string name="Word_layoutfail">注销失败</string>
    <string name="Word_logining">登录中，请稍候</string>
    <string name="Word_autologining">自动登录中，请稍候</string>
    <string name="Word_registercodeerror">验证码错误</string>
    <string name="Word_codesuccess">操作成功，请注意查收短信</string>
    <string name="Word_noregister">该手机号尚未注册，请先注册</string>
    <string name="Word_registerrepeat">账号已被注册</string>
    <string name="Word_verification">验证码</string>
    <string name="Word_inputverification" >请输入验证码</string>
    <string name="Word_verificationsize">验证码错误</string>
    <string name="Word_getverification" >获取验证码</string>
    <string name="Word_registerpswhint">请输入密码(6-15位)</string>
    <string name="Word_repswhint">请确认密码(6-15位)</string>
    <string name="Word_newpswhint">输入新密码(6-15位)</string>
    <string name="Word_renewpswhint">请确认密码(6-15位)</string>
    <string name="Word_oldpswhint">输入旧密码</string>
    <string name="Word_enternewpsw">输入新密码</string>
    <string name="Word_pswlength">密码长度不能小于6位</string>
    <string name="Word_enternewpsw2">确认新密码</string>
    <string name="Word_newpswdiffold">新密码不能和旧密码相同</string>
    <string name="Word_findpsw">找回密码</string>
    <string name="Word_sureown">验证身份</string>
    <string name="Word_tonewphone">绑定新手机</string>
    <string name="Word_commit">提交</string>
    <string name="Word_commitsuccess">提交成功</string>
    <string name="Word_forgetpswsuccess">密码修改成功,请用新密码登录</string>
    <string name="Word_commitfail">提交失败</string>
    <string name="Word_codefail">验证码错误</string>
    <string name="Word_updatepswfail">旧密码错误</string>
    <string name="Word_next">下一步(1/2)</string>
    <string name="Word_next2">下一步(2/2)</string>
    <string name="Word_nexttv">下一步</string>
    <string name="Word_picinfo">图片详情</string>
    <string name="Word_preview">图片预览</string>
    <string name="Word_upload">上传图片</string>
    <string name="Word_zuopnum" >作品:</string>
    <string name="Word_fansnum">粉丝:</string>
    <string name="Word_peoplediscuss">短评······(全部%s条)</string>
    <string name="more_comment">> 更多短评%s条</string>
    <string name="Word_nodiscuss">暂无评论</string>
    <string name="Word_discuss">评论</string>
    <string name="Word_discussdialoghint">请输入您的评论</string>
    <string name="Word_discusssuccess">评论发表成功</string>
    <string name="Word_discusserror">评论发表失败</string>
    <string name="Word_playernum">次</string>
    <string name="Word_timelong">00\'00\"</string>
    <string name="Word_discusshint">期待你的神评</string>
    <string name="not_have_more">没有更多内容了</string>
    <string name="internet_error">网络访问超时,请检查网络</string>
    <string name="checkbet_word">请检查网络连接</string>
    <string name="havenodata">当前数据为空！</string>
    <string name="updateinfosuccess">更新成功</string>
    <string name="updateinfofail">更新失败</string>
    <string name="Word_searchhint">请输入关键字</string>
    <string name="Word_loading">加载中,请稍候</string>
    <string name="Word_searching">正在搜索,请稍候</string>
    <string name="Word_collectsuccess" >已收藏</string>
    <string name="Word_deletecollectsuccess">取消收藏</string>
    <string name="Word_collecterror" >收藏失败</string>
    <string name="Word_followsuccess" >已关注</string>
    <string name="Word_followerror" >关注失败</string>
    <string name="Word_likesuccess" >点赞成功</string>
    <string name="Word_likeerror" >点赞失败</string>
    <string name="Word_worksuccess">操作成功</string>
    <string name="Word_workerror" >操作失败</string>
    <string name="Word_layout">退出登录</string>
    <string name="Word_videoupload">视频上传</string>
    <string name="Word_picupload">图片上传</string>
    <string name="Word_addparttitle" >南爵组织,最新视频在等你</string>
    <string name="Word_addparttitle2" >微信公众号:2635625</string>
    <string name="Word_addnow" >立即加入</string>
    <string name="Word_addpartcontenttitle">加入组织福利</string>
    <string name="Word_addpartcontent1" >1.不定时开展3D行业大牛交流会</string>
    <string name="Word_addpartcontent2" >2.南爵红包不定时发放</string>
    <string name="Word_mymsg">消息中心</string>
    <string name="Word_piclayout">图片区域</string>
    <string name="Word_addpic" >添加图片</string>
    <string name="Word_uploadselect">我已阅读并接受</string>
    <string name="Word_registertv1">点击注册按钮即表示同意</string>
    <string name="Word_3dagree">《用户上传协议》</string>
    <string name="Word_3dpeopleagree">《南爵3D视界用户协议》</string>
    <string name="Word_jianjie" >简介:</string>
    <string name="Word_biaoti">标题:</string>
    <string name="Word_miaoshu">描述:</string>
    <string name="Word_jianjiehint">为你的作品取个响亮的名字吧</string>
    <string name="Word_miaoshuhint">亮出你的作品特色吧</string>
    <string name="Word_paizhao">拍照</string>
    <string name="Word_xiangce">相册</string>
    <string name="Word_finish">完成</string>
    <string name="Word_nosd">内存卡不存在</string>
    <string name="Word_picnomore">最多上传7张图片</string>
    <string name="downLoad_notification_ticker">正在下载新版本</string>
    <string name="update_title">更新提示</string>
    <string name="update_content">发现新版本,是否为您下载更新?</string>
    <string name="Word_sexselect">性别选择</string>
    <string name="Word_tousuvideo">投诉视频内容</string>
    <string name="Word_picselect">图片选择</string>
    <string name="Word_allselect">全选</string>
    <string name="Word_allunselect">全不选</string>
    <string name="Word_selectdelete">请选择要删除的历史记录</string>
    <string name="Word_askdelete">确定删除选中的历史记录?</string>
    <string name="Word_delete">删除</string>
    <string name="Word_close">关闭</string>
    <string name="Word_noticetitle">提示</string>
    <string name="Word_contenttitle1">《南爵3D视界用户协议》</string>
    <string name="Word_noticecontent">当前应用缺少必要权限,请点击 \"设置\"—\"权限管理\" 打开 \"定位\" 、 \"手机读写存储\" 、 \"相机\" 和 \"摄像头\" 权限,最后点击两次后退按钮，即可返回。</string>
    <string name="Word_noticewrite">当前应用缺少必要权限,请点击 \"设置\"—\"权限管理\" 打开 \"手机读写存储\" 权限,最后点击两次后退按钮，即可返回。</string>
    <string name="Word_noticerecord">当前应用缺少必要权限,请点击 \"设置\"—\"权限管理\" 打开 \"相机\" 和 \"摄像头\" 权限,最后点击两次后退按钮，即可返回。</string>
    <string name="Word_noticecamera">当前应用缺少必要权限,请点击 \"设置\"—\"权限管理\" 打开 \"相机\" 权限,最后点击两次后退按钮，即可返回。</string>
    <string name="Word_noticecontent2">请点击\"设置\"—\"权限管理\"打开所需权限。</string>
    <string name="Word_noticecontent3">最后点击两次后退按钮，即可返回。</string>
    <string name="Word_deleterecode">确定删除所拍摄视频?</string>
    <string name="Word_deletetitle">确定删除选中条目?</string>
    <string name="Word_deletedownload">已下载的记录会同时删除资源文件,确定删除?</string>
    <string name="Word_deleteloading">该视频正在下载,确定删除该项?</string>
    <string name="Word_notloaded">该视频还未下载完成</string>
    <string name="Word_islayout">确定退出登录?</string>
    <string name="Word_gprdownload">当前网络连接是数据流量，确定继续操作?</string>
    <string name="Word_uploadsuccesstv1">视频正在上传</string>
    <string name="Word_uploadsuccesstv">文件上传完成</string>
    <string name="Word_uploadsuccesstv2">感谢您对我们工作的支持</string>
    <string name="Word_uploadwait">正在上传,请稍候</string>
    <string name="Word_downloadhave">下载列表已存在该资源</string>
    <string name="Word_adddownload">开始下载</string>
    <string name="Word_pause">已暂停</string>
    <string name="Word_pausedown">暂停下载</string>
    <string name="Word_finishdownload">已完成</string>
</resources>