<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/word_f_345"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <!-- 当前绑定手机号 -->
        <RelativeLayout
            android:id="@+id/updatepsw_oldpswrela"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lay_10"
            android:background="@color/white"
            android:paddingLeft="@dimen/lay_16"
            android:paddingRight="@dimen/lay_16"
            android:paddingTop="@dimen/lay_8"
            android:paddingBottom="@dimen/lay_8">
            <TextView
                android:id="@+id/updatepsw_oldpswtv"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/lay_36"
                android:gravity="center"
                android:text="@string/Word_phonenum"
                android:textSize="@dimen/font_15"
                android:textColor="@color/word_six_four"
                android:layout_centerVertical="true"/>
            <TextView
                android:id="@+id/updatepsw_timebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:textColor="@drawable/redee2gray_textcolor"
                android:textSize="@dimen/font_12"
                android:text="@string/Word_getverification"
                />

            <com.unbounded.video.view.banner.containsEmojiEditText.ContainsEmojiEditText
                android:id="@+id/updatepsw_phoneedt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/lay_30"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/lay_80"
                android:layout_toLeftOf="@+id/updatepsw_timebtn"
                android:layout_marginRight="@dimen/lay_8"
                android:inputType="number"
                android:digits="@string/rule_password"
                android:maxLines="1"
                android:maxLength="11"
                android:hint="@string/Word_loginnamehint"
                android:textColorHint="@color/word_six_c"
                android:textSize="@dimen/font_14"
                android:textColor="@color/word_six_four"
                android:background="@null"
                />
        </RelativeLayout>
        <!-- 验证码 -->
        <RelativeLayout
            android:id="@+id/updatepsw_newpswrela"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/updatepsw_oldpswrela"
            android:layout_marginTop="@dimen/lay_1px"
            android:background="@color/white"
            android:paddingLeft="@dimen/lay_16"
            android:paddingRight="@dimen/lay_8"
            android:paddingTop="@dimen/lay_8"
            android:paddingBottom="@dimen/lay_8">
            <TextView
                android:id="@+id/updatepsw_newpswtv"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/lay_36"
                android:gravity="center"
                android:text="@string/Word_verification"
                android:textSize="@dimen/font_15"
                android:textColor="@color/word_six_four"
                android:layout_centerVertical="true"/>

            <com.unbounded.video.view.banner.containsEmojiEditText.ContainsEmojiEditText
                android:id="@+id/updatepsw_codeedt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/lay_30"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/lay_80"
                android:inputType="number"
                android:digits="@string/rule_password"
                android:maxLines="1"
                android:maxLength="6"
                android:hint="@string/Word_inputverification"
                android:textColorHint="@color/word_six_c"
                android:textSize="@dimen/font_14"
                android:textColor="@color/word_six_four"
                android:background="@null"
                />
        </RelativeLayout>

        <!-- 按钮 -->
        <Button
            android:id="@+id/updatepsw_next2btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/lay_42"
            android:layout_below="@+id/updatepsw_newpswrela"
            android:layout_marginTop="@dimen/lay_30"
            android:layout_marginLeft="@dimen/lay_30"
            android:layout_marginRight="@dimen/lay_30"
            android:textColor="@drawable/white2black_textcolor"
            android:text="@string/Word_next2"
            android:background="@drawable/buttonbtn_selector"
            />

    </RelativeLayout>
</RelativeLayout>
