<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.unbounded.video.com.unbounded.video.activity.SplashActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/word_f_345"
        >
        <!-- 旧密码 -->
        <RelativeLayout
            android:id="@+id/updatepsw_oldpswrela"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lay_10"
            android:background="@color/white"
            android:paddingLeft="@dimen/lay_16"
            android:paddingRight="@dimen/lay_8"
            android:paddingTop="@dimen/lay_8"
            android:paddingBottom="@dimen/lay_8">
            <TextView
                android:id="@+id/updatepsw_oldpswtv"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/lay_36"
                android:gravity="center"
                android:text="@string/Word_oldpsw"
                android:textSize="@dimen/font_15"
                android:textColor="@color/word_six_four"
                android:layout_centerVertical="true"/>

            <com.unbounded.video.view.banner.containsEmojiEditText.ContainsEmojiEditText
                android:id="@+id/updatepsw_oldpswedt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/lay_30"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/lay_80"
                android:inputType="textPassword"
                android:digits="@string/rule_password"
                android:maxLines="1"
                android:maxLength="15"
                android:hint="@string/Word_oldpswhint"
                android:textColorHint="@color/word_six_c"
                android:textSize="@dimen/font_14"
                android:textColor="@color/word_six_four"
                android:background="@null"
                />
        </RelativeLayout>
        <!-- 新密码 -->
        <RelativeLayout
            android:id="@+id/updatepsw_newpswrela"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/updatepsw_oldpswrela"
            android:layout_marginTop="@dimen/lay_1px"
            android:background="@color/white"
            android:paddingLeft="@dimen/lay_16"
            android:paddingRight="@dimen/lay_8"
            android:paddingTop="@dimen/lay_8"
            android:paddingBottom="@dimen/lay_8">
            <TextView
                android:id="@+id/updatepsw_newpswtv"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/lay_36"
                android:gravity="center"
                android:text="@string/Word_newpsw"
                android:textSize="@dimen/font_15"
                android:textColor="@color/word_six_four"
                android:layout_centerVertical="true"/>

            <com.unbounded.video.view.banner.containsEmojiEditText.ContainsEmojiEditText
                android:id="@+id/updatepsw_newpswedt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/lay_30"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/lay_80"
                android:inputType="textPassword"
                android:digits="@string/rule_password"
                android:maxLines="1"
                android:maxLength="15"
                android:hint="@string/Word_newpswhint"
                android:textColorHint="@color/word_six_c"
                android:textSize="@dimen/font_14"
                android:textColor="@color/word_six_four"
                android:background="@null"
                />
        </RelativeLayout>
        <!-- 确认密码 -->
        <RelativeLayout
            android:id="@+id/updatepsw_newpsw2rela"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/updatepsw_newpswrela"
            android:layout_marginTop="@dimen/lay_1px"
            android:background="@color/white"
            android:paddingLeft="@dimen/lay_16"
            android:paddingRight="@dimen/lay_8"
            android:paddingTop="@dimen/lay_8"
            android:paddingBottom="@dimen/lay_8">
            <TextView
                android:id="@+id/updatepsw_newpsw2tv"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/lay_36"
                android:gravity="center"
                android:text="@string/Word_surepsw"
                android:textSize="@dimen/font_15"
                android:textColor="@color/word_six_four"
                android:layout_centerVertical="true"/>

            <com.unbounded.video.view.banner.containsEmojiEditText.ContainsEmojiEditText
                android:id="@+id/updatepsw_newpsw2edt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/lay_30"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/lay_80"
                android:inputType="textPassword"
                android:digits="@string/rule_password"
                android:maxLines="1"
                android:maxLength="15"
                android:hint="@string/Word_renewpswhint"
                android:textColorHint="@color/word_six_c"
                android:textSize="@dimen/font_14"
                android:textColor="@color/word_six_four"
                android:background="@null"
                />
        </RelativeLayout>


    </RelativeLayout>
</RelativeLayout>
