<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/lay_15"
    android:paddingBottom="@dimen/lay_15"
    android:paddingLeft="@dimen/lay_20"
    android:paddingRight="@dimen/lay_20"
    android:background="@drawable/yuanjiaowhite_border"
    >

    <TextView
        android:id="@+id/uploaddia_tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/Word_uploadsuccesstv"
        android:textColor="@color/titleblue"
        android:textSize="@dimen/font_16"
        />
    <TextView
        android:id="@+id/uploaddia_tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uploaddia_tv1"
        android:layout_marginTop="@dimen/lay_10"
        android:layout_centerHorizontal="true"
        android:text="@string/Word_uploadsuccesstv2"
        android:textColor="@color/titleblue"
        android:textSize="@dimen/font_16"
        />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/lay_20"
        android:layout_marginLeft="@dimen/lay_40"
        android:layout_marginRight="@dimen/lay_40"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/uploaddia_tv2"
        >
        <Button
            android:id="@+id/uploaddia_yesbtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/lay_36"
            android:text="@string/sure_btn"
            android:textColor="@drawable/white2black_textcolor"
            android:background="@drawable/buttonbtn_selector"
            android:textSize="@dimen/font_14"
            />
    </RelativeLayout>

</RelativeLayout>
