<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
	android:background="@android:color/transparent"
     >

	<!-- TOP -->
	<ImageView
		android:id="@+id/noticeupdate_topimg"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:src="@mipmap/versionbg"
		/>


	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/noticeupdate_topimg"
		android:layout_marginTop="-5dp"
		android:background="@drawable/bottomyuanjiaowhite_border"
		>
		<RelativeLayout
			android:id="@+id/noticeupdate_rela"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_below="@+id/noticeupdate_sc"
			android:padding="20dp"
			>

			<TextView
				android:id="@+id/noticeupdate_yestv"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/white"
				android:textSize="@dimen/font_14"
				android:text="@string/sure_btn"
				android:paddingTop="@dimen/lay_7"
				android:paddingBottom="@dimen/lay_7"
				android:paddingLeft="@dimen/lay_24"
				android:paddingRight="@dimen/lay_24"
				android:background="@drawable/orange_full"/>
			<TextView
				android:id="@+id/noticeupdate_cancletv"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_toRightOf="@+id/noticeupdate_yestv"
				android:layout_alignBottom="@+id/noticeupdate_yestv"
				android:layout_marginLeft="40dp"
				android:textColor="@color/orangeff"
				android:textSize="@dimen/font_14"
				android:text="@string/cancle_btn"
				android:paddingTop="@dimen/lay_7"
				android:paddingBottom="@dimen/lay_7"
				android:paddingLeft="@dimen/lay_24"
				android:paddingRight="@dimen/lay_24"
				android:background="@drawable/orange_border"/>
		</RelativeLayout>

		<ScrollView
			android:id="@+id/noticeupdate_sc"
			android:layout_width="match_parent"
			android:layout_height="123dp">
		<TextView
			android:id="@+id/noticeupdate_tv2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="15dp"
			android:layout_marginRight="15dp"
			android:textColor="@color/word_six_four"
			android:text="@string/update_content"
			android:layout_centerHorizontal="true" />
		</ScrollView>
	</RelativeLayout>

</RelativeLayout>
